--- a/src/components/OrganizerSignupForm/OrganizerSignupForm.scss
+++ b/src/components/OrganizerSignupForm/OrganizerSignupForm.scss
@@ -3,17 +3,17 @@
 
 	display: flex;
 	flex-direction: column;
-	gap: 32px;
+	gap: 22px;
 
 	&__text {
 		&-content {
 			display: flex;
 			flex-direction: column;
-			gap: 8px;
+			gap: 9px;
 
 			width: 380px;
 
-			margin-top: 18px;
+			margin-top: 26px;
 		}
 
 		margin: 0;
