--- a/src/components/PageMenu/PageMenu.scss
+++ b/src/components/PageMenu/PageMenu.scss
@@ -1,7 +1,8 @@
 .page-menu {
 	&__list {
 		padding: 0;
-		margin: 54px auto;
+
+		margin: 48px auto 40px;
 
 		list-style: none;
 
